add new projects

--- a/index.html
+++ b/index.html
@@ -4,11 +4,7 @@
  //
  // Dear recruiter / Tech leader:
  //
- // Find here the way I like coding,
- // Despite HTML is pretty boring I can asure my Rails & PostgreSQL abilites stronger than expected
- // Feel free to check every detail and letting me know if found any mistake
- //
- // total_hours_used_here = 18
+ // please reach me out at my email :) alonsog.alberto@gmail.com
  //
 -->
 <head>
@@ -55,7 +51,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 			      </a>
 			      <div class="navbar-item has-dropdown is-hoverable">
 			        <a class="navbar-link" href="#about">
-			          Recent Work
+			          Work
 			        </a>
 			        <div class="navbar-dropdown is-boxed">
 			          <a class="navbar-item" href="work_hogaru.html">
@@ -121,15 +117,20 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 							</article>
 							<p class="">
 								<br/>
-								Data-driven product designer for services levered by technology.
-								Holding a Design degree, worked as a UX Designer and Front-end developer, my background like any other digital product professional is not traditional.<br/>
-								My career is focused on planning, testing, deploying, measuring and iterating digital services
+								Seven years experienced product innovation professional passionate for levering products/services driving data and user-centred design.
+								<br/>
+								Holding a Design degree, worked as Product Manager, UX Researcher, Service Designer and Front-end developer, my background is not traditional.
+								<br>
+								Find here a proof of Digital Transformation (planning, testing, deploying and measuring) in fintech, services and cutting edge technology. (Y Combinator 2017).
 								<br>
 								<br>
-								Find here a merge between Service Design and Technology Crafting.
 								In the past with: Rappi, Samsung, Intel, IT Minsitry. Mentored by: Y Combinator, Endeavor. Awarded by: MIT Solve, UN Habitat, Startup Summit Spain.
 								<br/><br/>
-								Currently at <span class='has-text-weight-semibold' style='color:	#CD4D2D;'>Endava</span>  and acquiring a certification on data analysis 🤓
+								Certified in <a href="https://www.credential.net/91399918-b66d-4cc8-8b51-da8528806d29" target="_blank">
+									<span class='has-text-weight-semibold' style='color:	#CD4D2D;'>Data analysis with Python & SQL</span>
+									</a>
+								<br/>
+								Digital Innovation Graduate Diploma @LSE (London School of Economics and Political Science) in progress.
 								<br/>
 								Stay in touch! on the right corner buttons to <strong>get in contact</strong><br/>
 							</p>
@@ -143,9 +144,54 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 		<section  id="Work" class="section section-2">
 			<div class="container">
 				<div class="has-text-centered">
-					<h2 class="title is-2">Recent Work</h2>
+					<h2 class="title is-2">Work</h2>
 				</div>
 
+				<div class="columns is-desktop">
+					<!-- Project 6 -->
+					<div class="column is-6">
+						<a href="work_repay_1.html" target="_blank">
+							<div class="card">
+								<div class="card-image">
+									<figure class="image is-350x150">
+										<img src="assets/img/work_5.jpg" alt="RUJ">
+									</figure>
+								</div>
+								<div class="card-content">
+									<p class="title is-3">REPAY Config Tool</p>
+									<p class="subtitle is-6">Payments Gateway | If-then statement wizard for financial institutions Configuring</p>
+									<a href="work_endava.html" target="_blank"><p> <br>Read more
+										<span class="icon">
+											<i class="fa fa-long-arrow-right"></i>
+										</span>
+									</p></a>
+								</div>
+							</div>
+						</a>
+					</div>
+					<!-- Project 5 -->
+					<div class="column is-6">
+						<a href="work_repay_2.html" target="_blank">
+							<div class="card">
+								<div class="card-image">
+									<figure class="image is-350x150">
+										<img src="assets/img/work_6.jpg" alt="RUJ">
+									</figure>
+								</div>
+								<div class="card-content">
+									<p class="title is-3">REPAY Direct Debit</p>
+									<p class="subtitle is-6">Payments Gateway | Scheduled Payments</p>
+									<a href="work_endava.html" target="_blank"><p> <br>Read more
+										<span class="icon">
+											<i class="fa fa-long-arrow-right"></i>
+										</span>
+									</p></a>
+								</div>
+							</div>
+						</a>
+					</div>
+				</div>
+				<!-- end of row 1 -->
 				<div class="columns is-desktop">
 					<!-- Project 1 -->
 					<div class="column is-6">
@@ -189,9 +235,8 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 							</a>
 						</div>
 					</div>
-
-
 				</div>
+				<!-- end of row 2-->
 				<div class="columns is-desktop">
 					<!-- Project 3 -->
 					<div class="column is-6">
@@ -241,7 +286,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<small>© Alberto Alonso Portfolio 2018 👨🏻‍💻 &nbsp;|&nbsp; alberto.alonso@endava.com</small>
+			<small>© Alberto Alonso Portfolio 2020 👨🏻‍💻</small>
 		</section>
 
 		<!-- Scripts  -->
