--- a/work_rappi.html
+++ b/work_rappi.html
@@ -182,7 +182,7 @@
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<small>© Alberto Alonso Portfolio 2018 👨🏻‍💻 &nbsp;|&nbsp; alberto.alonso@endava.com</small>
+			<small>© Alberto Alonso Portfolio 2020 👨🏻‍💻 </small>
 		</section>
 
 		<!-- Scripts  -->
