--- a/work_repay_1.html
+++ b/work_repay_1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Work: Hogaru.com</title>
+	<title>Work: repay.com</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.6.1/css/bulma.min.css">
@@ -86,14 +86,14 @@
 		</nav>
 
 		<!-- About Me -->
-		<section class="hero is-info is-medium">
+		<section class="hero is-medium is-primary is-bold">
 		  <div class="hero-body">
 		    <div class="container">
 		      <h1 class="title">
-		        Hogaru.com
+		        Repay.com
 		      </h1>
 		      <h2 class="subtitle">
-		        On Demand cleaning for SMEs and Homes
+		        Loan Repayments Gateway
 		      </h2>
 		    </div>
 		  </div>
@@ -106,10 +106,13 @@
 					<div class="column is-three-quarters is-narrow">
 						<div class="has-text-left">
 							<div class="content">
-								<h2 class="title is-2">Online Acquisition Experience</h2>
-								<p class="subtitle is-5">Client lead conversion expierience enhanced to acquire subscriptions instead of one-shot purchases <br></p>
+								<h2 class="title is-2">Financial Institutions Configuration Wizard</h2>
+								<p class="subtitle is-5">If-Then statement Rules configuration, indexing and tracking <br></p>
 								<p class=''><span class='subtitle is-5'>The problem -</span>
-									Since Hogaru.com is a service, it's revenues rely on how many times a new client repurchase. The churn of new clients was above 42% augmenting dramatically the cost of effective acquisition.
+									REPAY holds over +1K financial institutions, works as a collection intercessor.<br/>
+									Binds their CRM with a 100% customizable Gateway, therefore require engineers to configure business requirements.
+									<br/>
+									From payment method, to convenience fee and amount settings.
 								</p>
 								<p class=''><span class='subtitle is-5'>The solution -</span>The acquisition and pricing experience was changed to a <strong>subscription model</strong> where the client had to give a trial to a month subscription rather than one cleaning.
 									Despite of the amount of cleanings purchased, the price per cleaning was defined by the weekly frequency chosen by the client.
