repay projects content

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 								</div>
 								<div class="card-content">
 									<p class="title is-3">REPAY Config Tool</p>
-									<p class="subtitle is-6">Payments Gateway | If-then statement wizard for financial institutions Configuring</p>
+									<p class="subtitle is-6">Payments Gateway | If-then statement wizard for lenders Configuring</p>
 									<a href="work_endava.html" target="_blank"><p> <br>Read more
 										<span class="icon">
 											<i class="fa fa-long-arrow-right"></i>
