--- a/work_repay_2.html
+++ b/work_repay_2.html
@@ -106,24 +106,20 @@
 					<div class="column is-three-quarters is-narrow">
 						<div class="has-text-left">
 							<div class="content">
-								<h2 class="title is-2">If-Then Statement Configuration Interface</h2>
-								<p class="subtitle is-5">If-Then statement Rules configuration, indexing and tracking <br></p>
-								<p class=''><span class='subtitle is-5'>The problem -</span>
-									REPAY holds over +1K Lenders, works as a collection intercessor.<br/>
-									Binds their CRM with a 100% customizable Gateway, therefore require engineers to configure business requirements.
+								<h2 class="title is-2">Direct Debit</h2>
+								<p class="subtitle is-5">Scheduled Payments for borrowers<br></p>
+								<p class=''><span class='subtitle is-5'>The opportunity -</span>
+									REPAY lenders define multiple installment repayments with their customers. Users can sign in every time they are doing a payment
 									<br/>
-									From payment method, to convenience fee and amount settings. Engineers override their own work and prefer to begin from scratch every time
-									they need to adjust a configuration.
+									What if they can set up automatic payments on a schedule?
 								</p>
 								<p class=''><span class='subtitle is-5'>The solution -</span>
-									Organise rules in a grid displaying a short summary about what the rule does, showing logs.
-									<br/>
-									Search feature for engineers to find previous work.
+									Conversational UX to create payment schedules
 									<br>
-									Rule duplicates reduced 27% after deploying. Besides, engieers are happy they can do quick fixes from their mobile phones confident at the airport! ✈️
+									Scheduled payments grew from 19% of average monthly income to 54%
 								</p>
 								<p class=''><span class='subtitle is-5'>The UX Approach -</span>
-									After elicited requirements from engineers, 15 low-fi iterations were needed to come to a version these users felt confident.
+									Brining concepts from analog industries to loans and adapting them to the repayments business context.
 									<br>
 								</p>
 								<div class="columns is-desktop">
@@ -135,8 +131,8 @@
 												</tr>
 											</thead>
 											<tr>
-												<td>Shadowing</td>
-												<td>Actvity Recording, Task Analysis</td>
+												<td>Product Box</td>
+												<td>User Persona</td>
 											</tr>
 										</table>
 										<table class='table'>
@@ -146,7 +142,7 @@
 												</tr>
 											</thead>
 											<tr>
-												<td>Quantitative - (Scraping) Rule duplicates peer engineer analysis </td>
+												<td>Quantitative - Paretto analysis for borrowers recurrent behaviours </td>
 												<td>Qualitative - Benchmarking, Imagine Future Scenario</td>
 											</tr>
 										</table>
@@ -159,7 +155,7 @@
 												</tr>
 											</thead>
 											<tr>
-												<td>15 iterations</td>
+												<td>23 iterations</td>
 												<td>User tests on maze.design</td>
 											</tr>
 										</table>
@@ -171,130 +167,33 @@
 											</thead>
 											<tr>
 												<td>Interactive Prototype</td>
-												<td>User Stories</td>
+												<td>Micro Interactions</td>
 											</tr>
 										</table>
 									</div>
 								</div>
 								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Wireframes, UI specs, and User stories were handed to developers
 									<br>
-								<div class="columns is-desktop">
-									<div class="column is-12">
-											<figure class="image is-350x150">
-												<img src="assets/img/repayRules.png" alt="rules">
-											</figure>
-									</div>
-								</div>
 								Check the whole flow wireframe in invision
-									<strong><a href="https://endava.invisionapp.com/share/CJREMU93QEW#/356598107_Admin-EBPP-Rules-PaymentMethod-Index" target="_blank"> HERE</a></strong>
-								</p>
-
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</section>
-
-		<!-- Second large project -->
-		<section id="ERP" class="section section-2">
-			<div class="container">
-				<div class="columns is-desktop is-centered">
-					<div class="column is-three-quarters is-narrow">
-						<div class="has-text-left">
-							<div class="content">
-								<h2 class="title is-2">Lenders Configuration Wizard</h2>
-								<p class="subtitle is-5">Emails, Notifications, SMS Configuration for Lender Campaigns <br></p>
-								<p class=''><span class='subtitle is-5'>The problem -</span>
-									Several steps are required to create a single notifications campaigns. Before, only engineers could operate this configurations.
-									<br/>
-									Lender employees are accounted to accompish this task.
-									<ol>
-										<li>Configure Rules (i.e. only when transation reponses)</li>
-										<li>Set templates (i.e. "You just paid $100.00")</li>
-										<li>Bind rules with templates</li>
-										<li>Schedule Campaigns</li>
-									</ol>
-									It used to require .json markup knowledge to create campaigns.
-								</p>
-								<p class=''><span class='subtitle is-5'>The solution -</span>
-								An wizard that walks users step through step, all forms and assets to run campaigns.
-									<br>
-								Lenders launched 1,045 campaigns on their own 30 days after releasing.
-								</p>
-								<p class=''><br><span class='subtitle is-5'>The UX Approach -</span>
-									The solution was conceived and refined by UX Research and prototyping using these qualitative and quantitative methods:
-									<br>
+									<strong><a href="https://endava.invisionapp.com/share/P9QF96XFA72#/411942414_Login-GuestAccount-ScheduledPayments-Select_Amount" target="_blank"> HERE</a></strong>
 								</p>
 								<div class="columns is-desktop">
-									<div class="column is-half">
-										<table class='table'>
-											<thead>
-												<tr>
-													<th colspan='2'>1. User & Problem Research</th>
-												</tr>
-											</thead>
-											<tr>
-												<td>User Daries</td>
-												<td>Interviews</td>
-											</tr>
-										</table>
-										<table class='table'>
-											<thead>
-												<tr>
-													<th colspan='2'>2. Scoping</th>
-												</tr>
-											</thead>
-											<tr>
-												<td>Quantitative - Funnel Analysis</td>
-												<td>Qualitative - Service Blueprints</td>
-											</tr>
-										</table>
+									<div class="column is-6">
+											<iframe src="https://custom-amount-prototype.now.sh" frameborder="0" width="100%" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 									</div>
-									<div class="column is-half">
-										<table class='table'>
-											<thead>
-												<tr>
-													<th colspan='2'>3. Protoyping</th>
-												</tr>
-											</thead>
-											<tr>
-												<td>Wizard of Oz</td>
-												<td>Role Playing</td>
-											</tr>
-										</table>
-										<table class='table'>
-											<thead>
-												<tr>
-													<th colspan='3'>4. Deployment</th>
-												</tr>
-											</thead>
-											<tr>
-												<td>Definition of service moments and touch points</td>
-												<td>Data Catalog</td>
-												<td>UI components</td>
-											</tr>
-										</table>
+									<div class="column is-6">
+										<figure class="image is-350x150">
+											<img src="assets/img/repayScheduled.png" alt="scheduled">
+										</figure>
 									</div>
 								</div>
-								<p class=''><span class='subtitle is-5'>The Deliverables -</span> Wireframes (confidential), UI specs, User stories and the decision tree were handed to developers
-									<br>
-								Wireframes and UI specs are confidential, however the decision tree can be checked here:
-								</p>
-							</div>
-						</div>
-						<div class="columns is-desktop">
-							<div class="column is-12">
-									<figure class="image is-350x150">
-										<img src="assets/img/repayNotifications.png" alt="notifications">
-									</figure>
+
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</section>
-
 
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
