--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 			          Work
 			        </a>
 			        <div class="navbar-dropdown is-boxed">
+								<a class="navbar-item" href="work_repay_2.html">
+			            Repay consumer-facing
+			          </a>
+								<a class="navbar-item" href="work_repay_1.html">
+			            Repay admin-facing
+			          </a>
 			          <a class="navbar-item" href="work_hogaru.html">
 			            Hogaru.com
 			          </a>
