--- a/work_nequi.html
+++ b/work_nequi.html
@@ -38,6 +38,12 @@
 							Work
 						</a>
 						<div class="navbar-dropdown is-boxed">
+							<a class="navbar-item" href="work_repay_2.html">
+								Repay consumer-facing
+							</a>
+							<a class="navbar-item" href="work_repay_1.html">
+								Repay admin-facing
+							</a>
 							<a class="navbar-item" href="work_hogaru.html">
 								Hogaru.com
 							</a>
