--- a/work_repay_1.html
+++ b/work_repay_1.html
@@ -30,6 +30,12 @@
 
 		  <div class="navbar-menu" id="navMenu">
 				<div class="navbar-start">
+					<a class="navbar-item" href="work_repay_2.html">
+						Repay consumer-facing
+					</a>
+					<a class="navbar-item" href="work_repay_1.html">
+						Repay admin-facing
+					</a>
 					<a class="navbar-item" href="https://a-alonso.github.io/portfolio/">
 						Home
 					</a>
