--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 
 			<div class="nav-right nav-menu">
 				<a class="nav-item" href="#about">About</a>
+                <a class="nav-item" href="#skills">Skills</a>
 				<a class="nav-item" href="#projects">Projects</a>
 				<a class="nav-item" href="#social">Social</a>
 			</div>
