added some changes

--- a/index.html
+++ b/index.html
@@ -122,6 +122,14 @@
 						<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
 					</div>
 				</div>
+				<div class="social-container columns">
+					<div class="column is-6 has-text-centered">
+						<a target="_blank" href="https://www.instagram.com"><img class="" width="38%" height="40%" src="assets/img/instagram.png"></a>
+					</div>
+					<div class="column is-6 has-text-centered">
+						<a target="_blank" href="https://www.github.com"><img class="" width="38%" height="40%" src="assets/img/github.png"></a>
+					</div>
+				</div>
 			</div>
 		</section>	
 		
