--- a/index.html
+++ b/index.html
@@ -17,21 +17,9 @@
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
 			<div class="nav-left">
-				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-medium"></i>
-					</span>
-				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-github"></i>
-					</span>
-				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-twitter"></i>
-					</span>
-				</a>				
+				<a href="http://medium.com/@hassanhelfi/" class="nav-item"> <span class="icon"><i class="fa fa-medium"></i></span> </a>
+				<a href="http://github.com/helfi92" class="nav-item"> <span class="icon"><i class="fa fa-github"></i> </span> </a>
+				<a href="https://twitter.com/hassanhelfi" class="nav-item"> <span class="icon"> <i class="fa fa-twitter"></i> </span> </a>				
 			</div>
 
 			<div class="nav-right nav-menu">
