--- a/index.html
+++ b/index.html
@@ -7,7 +7,15 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
 	<link rel="stylesheet" type="text/css" href="assets/css/styles.css">
 
-	<link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
+	<!-- <link rel="icon" type="image/x-icon" href="assets/img/favicon.png"> -->
+	<link rel="apple-touch-icon" sizes="180x180" href="assets/img//apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="assets/img//favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="assets/img//favicon-16x16.png">
+	<link rel="manifest" href="assets/img//site.webmanifest">
+	<link rel="mask-icon" href="assets/img//safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#da532c">
+	<meta name="theme-color" content="#ffffff">
+	
 	<meta name="author" content="Hassan Ali">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
