--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 				<img class="avatar" src="assets/img/profile.png">
 			</div>
 			<div class="container"></br>
+			<h3>I'm a<span class="typing"></span></h3>
 				<p class="intro">
 					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
 				</p>
@@ -131,6 +132,16 @@
 		</section>
 		
 		<!-- Scripts  -->
+	<script type="text/javascript">
+    		var typed = new Typed('.typing',{
+	      	strings: ["Developer","Designer","Programmer"],
+      		loop: true,
+     		typeSpeed: 65,
+      		backSpeed: 65,
+    		});
+  	</script>
+
+
 		<script src="controller.js"></script>		
 	</body>	
 </html>
