--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 							<div class="card">
 								<div class="card-image">
 									<figure class="image is-350x150">
-										<img src="assets/img/work_5.jpg" alt="RUJ">
+										<img src="assets/img/work_5.jpg" alt="Repay">
 									</figure>
 								</div>
 								<div class="card-content">
@@ -181,13 +181,13 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 							<div class="card">
 								<div class="card-image">
 									<figure class="image is-350x150">
-										<img src="assets/img/work_6.jpg" alt="RUJ">
+										<img src="assets/img/work_6.jpg" alt="Repay">
 									</figure>
 								</div>
 								<div class="card-content">
 									<p class="title is-3">REPAY Direct Debit</p>
 									<p class="subtitle is-6">Payments Gateway | Scheduled Payments</p>
-									<a href="work_endava.html" target="_blank"><p> <br>Read more
+									<a href="work_repay_2.html" target="_blank"><p> <br>Read more
 										<span class="icon">
 											<i class="fa fa-long-arrow-right"></i>
 										</span>
@@ -211,7 +211,7 @@ mixpanel.init("98cd2875919d56c58986d86e3ba1e16e");</script><!-- end Mixpanel -->
 								<div class="card-content">
 									<p class="title is-3">Endava Ramp-Up Journal</p>
 									<p class="subtitle is-6">Onboarding tool for large companies | Endava</p>
-									<a href="work_endava.html" target="_blank"><p> <br>Read more
+									<a href="work_repay_1.html" target="_blank"><p> <br>Read more
 										<span class="icon">
 											<i class="fa fa-long-arrow-right"></i>
 										</span>
