--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
 			<div class="nav-left">
-				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
+				<!-- <a href="http://medium.com/@hassanhelfi/" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-medium"></i>
 					</span>
-				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				</a> -->
+				<a href="http://github.com/xine75" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
+				<a href="https://twitter.com/xine75" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-twitter"></i>
 					</span>
@@ -57,8 +57,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
-				</p>
+					Former high school teacher in the throes of a mid-life career change. I decided to work with something even more intractable than teenagers: code. 				</p>
 			</div>
 		</section>
 		
