--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
-				</p>
+					Former high school teacher in the throes of a mid-life career change. I decided to work with something even more intractable than teenagers: code. 				</p>
 			</div>
 		</section>
 		
