--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
 			<!-- This "nav-menu" is hidden on mobile -->
 			<!-- Add the modifier "is-active" to display it on mobile -->
 			<div class="nav-left">
-				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
+				<!-- <a href="http://medium.com/@hassanhelfi/" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-medium"></i>
 					</span>
-				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
+				</a> -->
+				<a href="http://github.com/xine75" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-github"></i>
 					</span>
 				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
+				<a href="https://twitter.com/xine75" class="nav-item">
 					<span class="icon">
 						<i class="fa fa-twitter"></i>
 					</span>
@@ -53,12 +53,16 @@
 		<section id="about" class="section section-1">
 			<div class="container has-text-centered">
 				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/profile.png">
+				<img class="logo" src="assets/img/DozaLogo.png">
 			</div>
 			<div class="container"></br>
 				<p class="intro">
-					Former high school teacher in the throes of a mid-life career change. I decided to work with something even more intractable than teenagers: code. 				</p>
-			</div>
+					I loved being a classroom teacher.  Working with groups of teens, helping solve problems - personal, poetic and mathematical -a fire drill sounding off in the middle of a sentence - no two days were the same.  But after 17 years I felt the call to explore an old passion. I knew that some of the skills I cultivated as a teacher would apply to software development, but I was wrong about which ones. I’d been interested in coding since taking a computer science course as an undergrad, and believed my long immersion in the logic of geometry and calculus would serve me. But it’s actually the people skills, the facility with group dynamics, with making sure every voice is heard and every member feels valued, that has been most essential.  Software design is a team sport, and I’ve been working with groups, classes, clubs, and teams for 17 years.  And though code is not poetry, there is something about the pure economy of the language - each keystroke pulling its own weight, nothing included than isn’t necessary -  that brings poetry to mind. And so I find myself exactly in the right place.
+				</div>
+				<div class="container has-text-centered">
+					<!-- Source: https://flic.kr/p/pAZBNK -->
+					<img class="avatar" src="assets/img/profile2.jpeg">
+				</div>
 		</section>
 		
 		<!-- Projects -->
@@ -75,7 +79,7 @@
 							<article>
 								<div>
 									<figure class="image project-figure">
-										<img src="assets/img/project-1.jpg" alt="Image">
+										<img src="assets/img/ezgif.com-UsingKaBloom copy.gif" alt="Image">
 									</figure>
 								</div>
 								<div>			
@@ -115,18 +119,18 @@
 				</div>
 				<div class="social-container columns">
 					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class="" src="assets/img/linkedin.png"></a>
+						<a target="_blank" href="https://ca.linkedin.com/in/christine-doza"><img class="" src="assets/img/linkedin.png"></a>
 					</div>
-					<div class="column is-6 has-text-centered">
+					<!-- <div class="column is-6 has-text-centered">
 						<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
-					</div>
+					</div> -->
 				</div>
 			</div>
 		</section>	
 		
 		<!-- Footer -->
 		<section class="section-4 has-text-centered container">
-			<a href="http://www.hassanali.me/about">Hassan Ali</a>
+			<a href="http://www.hassanali.me/about">Christine Doza</a>
 		</section>
 		
 		<!-- Scripts  -->
