--- a/index.html
+++ b/index.html
@@ -167,8 +167,12 @@
 			</div>
 			<div class="social-container columns">
 				<div class="column is-6 has-text-centered">
-					<a target="_blank" href="https://ca.linkedin.com/in/christine-doza"><img class=""
+					<a target="_blank" href="https://ca.linkedin.com/in/christine-doza"><img class="" <a target="_blank"
 							src="assets/img/linkedin.png"></a>
+					<a target="_blank" href="https://twitter.com/Xine75"><img class="" <a target="_blank"
+							src="assets/img/twitter.png"></a>
+
+
 				</div>
 
 			</div>
