--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
 					<div class="box project-text">
 						<article>
 							<div>
+								<h4 class="project1-title">Client-Side Project: KaBloom</h4>
 								<figure class="image project-figure">
 									<img src="assets/img/ezgif.com-UsingKaBloom copy.gif" alt="Image">
 								</figure>
@@ -98,8 +99,7 @@
 								<p class="project1-text">
 									KaBloom is a mobile app intended to put houseplant care in the palm of the user's
 									hand. It allows the user to see a list of their plants at a glance alongside a few
-									pieces of crucial information. As a long-time plant parent, I find naming my plants
-									personifies them and hooks me in to providing more consistent care for them. Having
+									pieces of crucial information. Having
 									a photo of the plant as it looked when I first adopted it is an important visual cue
 									for comparing to the plant's current state. With a click, the user can access more
 									detailed information about the plant's care needs, such as lighting, fertilization.
@@ -114,12 +114,13 @@
 					<div class="box project-text">
 						<article>
 							<div>
+								<h4 class="project1-title">Full-Stack Project: NoveList</h4>
 								<figure class="image project-figure">
 									<img src="assets/img/BookDetailView.png" alt="Image">
 								</figure>
 							</div>
 							<div>
-								<p>
+								<p class="project2-text">
 									NoveList is a personal library manager. It leverages the power of Google Books API
 									to allow users to search and find the novels they want to add to their library. They
 									can then make notes on what they're reading, log start and finish-dates, rate their
