--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>Portfolio</title>
 	<!-- css files -->
@@ -11,126 +12,134 @@
 	<meta name="author" content="Hassan Ali">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
-	<body>
-		<!-- Navbar -->
-		<nav class="nav container void-background">
-			<!-- This "nav-menu" is hidden on mobile -->
-			<!-- Add the modifier "is-active" to display it on mobile -->
-			<div class="nav-left">
-				<a href="http://medium.com/@hassanhelfi/" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-medium"></i>
-					</span>
-				</a>
-				<a href="http://github.com/helfi92" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-github"></i>
-					</span>
-				</a>
-				<a href="https://twitter.com/hassanhelfi" class="nav-item">
-					<span class="icon">
-						<i class="fa fa-twitter"></i>
-					</span>
-				</a>				
+
+<body>
+	<!-- Navbar -->
+	<nav class="nav container void-background">
+		<!-- This "nav-menu" is hidden on mobile -->
+		<!-- Add the modifier "is-active" to display it on mobile -->
+		<div class="nav-left">
+			<a href="http://medium.com/@hassanhelfi/" class="nav-item">
+				<span class="icon">
+					<i class="fa fa-medium"></i>
+				</span>
+			</a>
+			<a href="http://github.com/helfi92" class="nav-item">
+				<span class="icon">
+					<i class="fa fa-github"></i>
+				</span>
+			</a>
+			<a href="https://twitter.com/hassanhelfi" class="nav-item">
+				<span class="icon">
+					<i class="fa fa-twitter"></i>
+				</span>
+			</a>
+		</div>
+
+		<div class="nav-right nav-menu">
+			<a class="nav-item" href="#about">About</a>
+			<a class="nav-item" href="#projects">Projects</a>
+			<a class="nav-item" href="#social">Social</a>
+		</div>
+
+		<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
+		<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
+		<span class="nav-toggle">
+			<span></span>
+			<span></span>
+			<span></span>
+		</span>
+	</nav>
+
+	<!-- About Me -->
+	<section id="about" class="section section-1">
+		<div class="container has-text-centered">
+			<!-- Source: https://flic.kr/p/pAZBNK -->
+			<img class="avatar" src="assets/img/profile.png">
+		</div>
+		<div class="container"></br>
+			<p class="intro">
+				Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will
+				succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical
+				talk.
+			</p>
+		</div>
+	</section>
+
+	<!-- Projects -->
+	<section id="projects" class="section section-2">
+		<div class="container">
+			<div class="has-text-centered">
+				<h3 class="title is-3">Projects</h3>
 			</div>
 
-			<div class="nav-right nav-menu">
-				<a class="nav-item" href="#about">About</a>
-				<a class="nav-item" href="#projects">Projects</a>
-				<a class="nav-item" href="#social">Social</a>
+			<div class="columns is-multiline is-desktop">
+				<!-- Project 1 -->
+				<div class="column">
+					<div class="box project-text">
+						<article>
+							<div>
+								<figure class="image project-figure">
+									<img src="assets/img/project-1.jpg" alt="Image">
+								</figure>
+							</div>
+							<div>
+								<p>
+									They don’t want us to eat. I told you all this before, when you have a swimming
+									pool, do not use chlorine, use salt water, the healing, salt water is the healing.
+								</p>
+							</div>
+						</article>
+					</div>
+				</div>
+				<!-- Project 2 -->
+				<div class="column">
+					<div class="box project-text">
+						<article>
+							<div>
+								<figure class="image project-figure">
+									<img src="assets/img/project-2.jpg" alt="Image">
+								</figure>
+							</div>
+							<div>
+								<p>
+									Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is
+									what you make it, so let’s make it.
+								</p>
+							</div>
+						</article>
+					</div>
+				</div>
 			</div>
+		</div>
+	</section>
 
-			<!-- This "nav-toggle" hamburger menu is only visible on mobile -->
-			<!-- You need JavaScript to toggle the "is-active" class on "nav-menu" -->
-			<span class="nav-toggle">
-				<span></span>
-				<span></span>
-				<span></span>
-			</span>
-		</nav>
-				
-		<!-- About Me -->
-		<section id="about" class="section section-1">
-			<div class="container has-text-centered">
-				<!-- Source: https://flic.kr/p/pAZBNK -->
-				<img class="avatar" src="assets/img/profile.png">
+	<!-- Social -->
+	<section id="social" class="section section-3">
+		<div class="container">
+			<div class="has-text-centered">
+				<h3 class="title is-3">Let's Socialize</h3>
 			</div>
-			<div class="container"></br>
-				<p class="intro">
-					Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical talk.
-				</p>
-			</div>
-		</section>
-		
-		<!-- Projects -->
-		<section  id="projects" class="section section-2">
-			<div class="container">
-				<div class="has-text-centered">
-					<h3 class="title is-3">Projects</h3>
+			<div class="social-container columns">
+				<div class="column is-6 has-text-centered">
+					<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class=""
+							src="assets/img/linkedin.png"></a>
 				</div>
-				
-				<div class="columns is-multiline is-desktop">
-					<!-- Project 1 -->
-					<div class="column">
-						<div class="box project-text">
-							<article>
-								<div>
-									<figure class="image project-figure">
-										<img src="assets/img/project-1.jpg" alt="Image">
-									</figure>
-								</div>
-								<div>			
-									<p>
-										They don’t want us to eat. I told you all this before, when you have a swimming pool, do not use chlorine, use salt water, the healing, salt water is the healing.
-									</p>
-								</div>
-							</article>
-						</div>
-					</div>
-					<!-- Project 2 -->
-					<div class="column">
-						<div class="box project-text">
-							<article>
-								<div>
-									<figure class="image project-figure">
-										<img src="assets/img/project-2.jpg" alt="Image">
-									</figure>
-								</div>
-								<div>			
-									<p>
-										Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is what you make it, so let’s make it.
-									</p>
-								</div>
-							</article>
-						</div>
-					</div>
+				<div class="column is-6 has-text-centered">
+					<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class=""
+							src="assets/img/facebook.png"></a>
 				</div>
 			</div>
-		</section>
+		</div>
+	</section>
 
-		<!-- Social -->
-		<section id="social" class="section section-3">
-			<div class="container">
-				<div class="has-text-centered">					
-					<h3 class="title is-3">Let's Socialize</h3>
-				</div>
-				<div class="social-container columns">
-					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class="" src="assets/img/linkedin.png"></a>
-					</div>
-					<div class="column is-6 has-text-centered">
-						<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class="" src="assets/img/facebook.png"></a>
-					</div>
-				</div>
-			</div>
-		</section>	
-		
-		<!-- Footer -->
-		<section class="section-4 has-text-centered container">
+	<!-- Footer -->
+	<!-- <section class="section-4 has-text-centered container">
 			<a href="http://www.hassanali.me/about">Hassan Ali</a>
-		</section>
-		
-		<!-- Scripts  -->
-		<script src="controller.js"></script>		
-	</body>	
+		</section> -->
+
+	<!-- Scripts  -->
+	<script src="controller.js"></script>
+</body>
+
 </html>
