Added tech stack and project gifs, updated links to link to my social accounts

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-	<title>Portfolio</title>
+	<title>Hunter Preast | Software Developer</title>
 	<!-- css files -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.3.1/css/bulma.min.css">
@@ -19,19 +19,19 @@
 		<!-- This "nav-menu" is hidden on mobile -->
 		<!-- Add the modifier "is-active" to display it on mobile -->
 		<div class="nav-left">
-			<a href="http://medium.com/@hassanhelfi/" class="nav-item">
+			<!-- <a href="http://medium.com/@hassanhelfi/" class="nav-item">
 				<span class="icon">
 					<i class="fa fa-medium"></i>
 				</span>
-			</a>
-			<a href="http://github.com/helfi92" class="nav-item">
+			</a> -->
+			<a href="https://github.com/HPreast" class="nav-item">
 				<span class="icon">
 					<i class="fa fa-github"></i>
 				</span>
 			</a>
-			<a href="https://twitter.com/hassanhelfi" class="nav-item">
+			<a href="mailto: Preasths1@gmail.com" class="nav-item">
 				<span class="icon">
-					<i class="fa fa-twitter"></i>
+					<i class="fa fa-envelope"></i>
 				</span>
 			</a>
 		</div>
@@ -80,7 +80,8 @@
 						<article>
 							<div>
 								<figure class="image project-figure">
-									<img src="assets/img/project-1.jpg" alt="Image">
+									<img src="assets/img/SkateBook-pt1.gif" alt="Image" class="gif">
+									<img src="assets/img/SkateBook-pt2 (2).gif" alt="Image" class="gif">
 								</figure>
 							</div>
 							<div>
@@ -98,7 +99,8 @@
 						<article>
 							<div>
 								<figure class="image project-figure">
-									<img src="assets/img/project-2.jpg" alt="Image">
+									<img src="assets/img/Nutshell-pt1.gif" alt="Image" class="gif">
+									<img src="assets/img/Nutshell-pt2.gif" alt="Image" class="gif">
 								</figure>
 							</div>
 							<div>
@@ -114,20 +116,89 @@
 		</div>
 	</section>
 
+	<!-- Skills -->
+	<!-- <section id="social" class="section section-3">
+		<div class="container">
+			<div class="has-text-centered">
+				<h3 class="title is-3">Skills</h3>
+			</div>
+			<div class="social-container columns">
+				<div class="column is-6 has-text-centered">
+					<a href="https://www.javascript.com/" target="_blank"><img class="techs"
+							src="assets/techs/JavaScript-logo.png" alt="Javascript" data-toggle="tooltip"
+							data-placement="top" title="Javascript" /></a><br />
+				</div>
+				<div class="column is-6 has-text-centered">
+					<a href="https://www.javascript.com/" target="_blank"><img class="techs"
+							src="assets/techs/JavaScript-logo.png" alt="Javascript" data-toggle="tooltip"
+							data-placement="top" title="Javascript" /></a><br />
+				</div>
+				<div class="column is-6 has-text-centered">
+					<a href="https://www.javascript.com/" target="_blank"><img class="techs"
+							src="assets/techs/JavaScript-logo.png" alt="Javascript" data-toggle="tooltip"
+							data-placement="top" title="Javascript" /></a><br />
+				</div>
+				<div class="column is-6 has-text-centered">
+					<a href="https://www.javascript.com/" target="_blank"><img class="techs"
+							src="assets/techs/JavaScript-logo.png" alt="Javascript" data-toggle="tooltip"
+							data-placement="top" title="Javascript" /></a><br />
+				</div>
+			</div>
+		</div>
+
+	</section> -->
+	<section id="skills" class="section section-1">
+		<div class="container">
+			<div class="has-text-centered">
+				<h3 class="title is-3">Skills</h3>
+			</div class="skill_logos">
+			<div class="columns is-multiline is-desktop">
+				<div class="column">
+					<div class="box project-text">
+						<article>
+							<div>
+								<div>
+									<img class="skil_logo" src="assets\techs\HTML5.png" Alt="Image">
+									<img class="skil_logo" src="assets\techs\CSS3.png" Alt="Image">
+									<img class="skil_logo" src="assets\techs\JavaScript-logo.png" Alt="Image">
+									<img class="skil_logo" src="assets\techs\ReactLogo.png" Alt="Image">
+									<img class="skil_logo" src="assets\techs\github.png" Alt="Image">
+									<img class="skil_logo" src="assets\techs\sql.png" Alt="Image">
+									<img class="skil_logo" src="assets\techs\.netLogo.png" Alt="Image">
+									<img class="skil_logo" src="assets\techs\CLogo.png" Alt="Image">
+								</div>
+								<figure class="image project-figure">
+									<!-- <img src="assets/img/ezgif.com-UsingKaBloom copy.gif" alt="Image"> -->
+								</figure>
+							</div>
+							<div>
+								<p class="project1-text">
+							</div>
+						</article>
+					</div>
+				</div>
+
+			</div>
+		</div>
+	</section>
+
+
 	<!-- Social -->
 	<section id="social" class="section section-3">
 		<div class="container">
 			<div class="has-text-centered">
-				<h3 class="title is-3">Let's Socialize</h3>
+				<h3 class="title is-3">Contact Me</h3>
 			</div>
 			<div class="social-container columns">
 				<div class="column is-6 has-text-centered">
-					<a target="_blank" href="https://ca.linkedin.com/in/hassan-ali-6132468a"><img class=""
+					<a target="_blank" href="https://www.linkedin.com/in/hunterspreast/"><img class=""
 							src="assets/img/linkedin.png"></a>
 				</div>
 				<div class="column is-6 has-text-centered">
-					<a target="_blank" href="https://www.facebook.com/Hassan.Helfi"><img class=""
-							src="assets/img/facebook.png"></a>
+					<a target="_blank" href="mailto: Preasths1@gmail.com">
+						<img class="" src="assets/techs/Gmail-logo.jpg">
+					</a>
+					<p>Preasths1@gmail.com</p>
 				</div>
 			</div>
 		</div>
