Added projects with summaries and gifs showcasing functionality

--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
 				<div class="column">
 					<div class="box project-text">
 						<article>
+							<h3 class="project-title">SkateBook</h3>
 							<div>
 								<figure class="image project-figure">
 									<img src="assets/img/SkateBook-pt1.gif" alt="Image" class="gif">
@@ -86,8 +87,15 @@
 							</div>
 							<div>
 								<p>
-									They don’t want us to eat. I told you all this before, when you have a swimming
-									pool, do not use chlorine, use salt water, the healing, salt water is the healing.
+									SkateBook is a web application designed to be an educational resource and social
+									platform for skateboarders. The user is able to view a list of tricks, which consist
+									of; descriptions, tips, gifs, and instructional videos for each trick. After finding
+									a trick the user would like to practice, they are able to select an affordance to
+									add that trick to the user's practice list. If the user finds a trick they are
+									comfortable with, they can select the affordance to add that trick to the library
+									list so the user may showcase their skills amd progress. Users are able to follow
+									others and stay updated on their friends progression through the news feed which
+									displays progress reports of the user and people the user follows.
 								</p>
 							</div>
 						</article>
@@ -97,6 +105,7 @@
 				<div class="column">
 					<div class="box project-text">
 						<article>
+							<h3 class="project-title">Nutshell React App</h3>
 							<div>
 								<figure class="image project-figure">
 									<img src="assets/img/Nutshell-pt1.gif" alt="Image" class="gif">
@@ -105,8 +114,22 @@
 							</div>
 							<div>
 								<p>
-									Bless up. Another one. How’s business? Boomin. Don’t ever play yourself. Life is
-									what you make it, so let’s make it.
+									Nutshell was a group project I was assigned during my time at Nashville Software
+									School. For this project we were tasked with building a web application which would
+									allow users to record and post articles to share interesting finds, events with
+									weather forecast corresponding
+									to the location and date of the selected event, and tasks to keep themselves
+									organized. Users are also able to
+									message other users in real time through the messenger. If a user would like to add
+									a friend, they may use the search bar feature or select the preferred users name
+									from the messenger if that user has posted a message.
+									<hr>
+									</hr>
+									Co-Creators: Ethan Mathis & Logan Demmy
+								</p>
+								<p>
+									Checkout their personal websites: & <a target="_blank"
+										href="http://logan-demmy.me/">logan-demmy.me</a></p>
 								</p>
 							</div>
 						</article>
