Added personal photo and about me section

--- a/index.html
+++ b/index.html
@@ -55,13 +55,14 @@
 	<section id="about" class="section section-1">
 		<div class="container has-text-centered">
 			<!-- Source: https://flic.kr/p/pAZBNK -->
-			<img class="avatar" src="assets/img/profile.png">
+			<img class="avatar" src="assets/img/HunterPreast.png">
 		</div>
 		<div class="container"></br>
 			<p class="intro">
-				Lorem Khaled Ipsum is a major key to success. To succeed you must believe. When you believe, you will
-				succeed. Mogul talk. Find peace, life is like a water fall, you’ve gotta flow. Lion! Fan luv. Eliptical
-				talk.
+				I've always been fearful of falling into a career I would end up regretting and wasting my talents.
+				When I decided to give software development a chance, I felt those worries slip away. As a
+				developer I am able to constantly learn and challenge myself and no day is like the last. I am
+				proud to call myself a developer because I am able to show up everyday eager to take on a new obstacle.
 			</p>
 		</div>
 	</section>
@@ -187,7 +188,7 @@
 									<img class="skil_logo" src="assets\techs\ReactLogo.png" Alt="Image">
 									<img class="skil_logo" src="assets\techs\github.png" Alt="Image">
 									<img class="skil_logo" src="assets\techs\sql.png" Alt="Image">
-									<img class="skil_logo" src="assets\techs\.netLogo.png" Alt="Image">
+									<img class="skil_logo" src="assets\techs\.netLogo.png" Alt=".net Logo">
 									<img class="skil_logo" src="assets\techs\CLogo.png" Alt="Image">
 								</div>
 								<figure class="image project-figure">
